--- a/.github/workflows/humble.yml
+++ b/.github/workflows/humble.yml
@@ -27,6 +27,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Install Dependencies
+        run: |
+          export DEBIAN_FRONTEND=noninteractive \
+          apt-get update \
+          && apt-get install -yqq --no-install-recommends \
+            libusb-1.0-0-dev
       - name: Prepare Workspace
         run: |
           rm \
