--- a/interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_driver/package.xml
+++ b/interbotix_ros_common_drivers/interbotix_ros_footswitch/interbotix_footswitch_driver/package.xml
@@ -15,7 +15,10 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>interbotix_footswitch_msgs</depend>
+  <depend>libusb-1.0-dev</depend>
   <depend>libusb-1.0</depend>
+  <depend>libusb-dev</depend>
+  <depend>libusb</depend>
   <depend>rclcpp_components</depend>
   <depend>rclcpp</depend>
 
